--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ main {
   .photo {
     object-fit: cover;
     height: 200px;
+    width: 200px;
     border: 4px solid blue;
     border-radius: 10%;
   }
