--- a/style.css
+++ b/style.css
@@ -52,6 +52,27 @@ main {
   .item-info h4 {
     margin-bottom: 8px;
   }
+  .btn-container {
+    margin-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+  }
+  .filter-btn {
+    background: transparent;
+    border-color: gold;
+    font-size: 16px;
+    text-transform: capitalize;
+    margin: 0 10px;
+    letter-spacing: 1px;
+    border-radius: 20%;
+    padding: 6px 12px;
+    color: gold;
+    cursor: pointer;
+  }
+  .filter-btn:hover {
+    background: gold;
+    color: white;
+  }
   @media screen and (min-width: 768px) {
     .menu-item {
       grid-template-columns: 225px 1fr;
